# MITK

./: .gitattributes  .gitignore  CMakeLists.txt  MITKPython.cmake.in  SuperBuild.cmake
Applications/PluginGenerator/: CMakeLists.txt
CMake/: mitkFunctionCreateModule.cmake  mitkFunctionCreatePlugin.cmake  mitkFunctionCreateWindowsBatchScript.cmake  mitkSetupCPack.cmake
CMake/PackageDepends/: MITK_CGAL_Config.cmake
CMakeExternals/: ACVD.cmake  ANN.cmake  Boost.cmake  CGAL.cmake  CTK.cmake  CTK.patch  CppUnit.cmake  DCMTK.cmake  Eigen.cmake  GDCM.cmake  GLEW.cmake  GLUT.cmake  HDF5.cmake  ITK-4.7.1.patch  ITK-4.9.0.patch  ITK.cmake  MITKData.cmake  MatchPoint.cmake  Numpy.cmake  OpenCV.cmake  OpenIGTLink.cmake  PCRE.cmake  Poco.cmake  Python-2.7.3.patch  Python-2.7.8.patch  Python.cmake  Qwt.cmake  Raptor2.cmake  Rasqal.cmake  Redland.cmake  SOFA.cmake  SWIG.cmake  SimpleITK.cmake  VMTK.cmake  VMTK.patch  VTK.cmake  VTK.patch  Vigra.cmake  ZLIB.cmake  ZLIB_URL.cmake  (+6 more)
Core/Code/: CMakeLists.txt  files.cmake
Modules/: CMakeLists.txt  ModuleList.cmake
Modules/AlgorithmsExt/: mitkSimpleUnstructuredGridHistogram.cpp
Modules/DiffusionImaging/FiberTracking/: CMakeLists.txt
Modules/DiffusionImaging/FiberTracking/Fiberfox/: itkKspaceImageFilter.cpp
Modules/DiffusionImaging/FiberTracking/IODataStructures/PlanarFigureComposite/: mitkPlanarFigureComposite.h
Modules/Ext/: CMakeLists.txt  files.cmake
Modules/Ext/Algorithms/: mitkAngleCorrectByPointFilter.h  mitkCylindricToCartesianFilter.h  mitkGeometryDataSource.h  mitkImageToLookupTableFilter.h  mitkInterpolateLinesFilter.h  mitkMeshSource.h  mitkPlaneCutFilter.h  mitkPlaneFit.h  mitkPlanesPerpendicularToLinesFilter.h  mitkPointSetIndexToWorldTransformFilter.h  mitkPointSetToCurvedGeometryFilter.h  mitkPointSetToGeometryDataFilter.h  mitkPolygonToRingFilter.h  mitkProbeFilter.cpp  mitkProbeFilter.h  mitkSurfaceIndexToWorldTransformFilter.h  mitkUnstructuredGridHistogram.cpp  mitkUnstructuredGridHistogram.h  mitkVolumeVisualizationImagePreprocessor.h  mitkvtkImageStencilRaster.h  mitkvtkLassoStencilSource.h  vtkPointSetSlicer.h
Modules/Ext/DataManagement/: mitkAffineTransformationOperation.h  mitkColorSequenceHalfTones.h  mitkDataTreeFilterEvents.h  mitkDataTreeFilterFunctions.h  mitkDelegateManager.h  mitkDrawOperation.h  mitkExternAbstractTransformGeometry.h  mitkFrameOfReferenceUIDManager.h  mitkItkBaseDataAdapter.h  mitkPropertyManager.h  mitkSeedsImage.h  mitkSeedsImageLookupTableSource.h  mitkSphereLandmarkProjector.cpp  mitkSphereLandmarkProjector.h  mitkUSLookupTableSource.h  vtkObjectSet.h
Modules/Ext/IO/: mitkObjFileIOFactory.h  mitkObjFileReader.h  mitkPACSPlugin.h  mitkParRecFileIOFactory.h  mitkParRecFileReader.h  mitkPropertyListExportToXmlFile.h  mitkPropertyListImportFromXmlFile.h  mitkStlVolumeTimeSeriesIOFactory.h  mitkStlVolumeTimeSeriesReader.h  mitkUnstructuredGridVtkWriter.h  mitkUnstructuredGridVtkWriter.txx  mitkUnstructuredGridVtkWriterFactory.h  mitkVtkUnstructuredGridIOFactory.h  mitkVtkUnstructuredGridReader.cpp  mitkVtkUnstructuredGridReader.h  mitkVtkVolumeTimeSeriesIOFactory.h  mitkVtkVolumeTimeSeriesReader.h
Modules/Ext/Interactions/: mitkAffineInteractor3D.h  mitkConferenceEventMapper.h  mitkConnectPointsInteractor.h  mitkDisplayPointSetInteractor.h  mitkInteractionDebug.h  mitkInteractionDebugger.h  mitkPointInteractor.h  mitkPointSelectorInteractor.h  mitkSeedsInteractor.h  mitkSocketClient.h  mitkSocketClientImplementation.h  mitkSurfaceDeformationInteractor3D.h  mitkSurfaceInteractor.h
Modules/Ext/Rendering/: mitkImageBackground2D.h  mitkLineMapper2D.h  mitkLineVtkMapper3D.h  mitkNativeRenderWindowInteractor.h  vtkMitkOpenGLGPUVolumeRayCastMapper.h
Plugins/: PluginList.cmake
Utilities/mbilog/: CMakeLists.txt
(+260 files in other folders)
